--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
-        <link rel = "stylesheet" type = "text/css" href = "style.css">
         <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/build/ol.js"></script>
+        <link rel = "stylesheet" type = "text/css" href = "style.css">
+        <link rel = "stylesheet" type = "text/css" href = "list-style.css">
         <title>tracker-gui</title>
     </head>
     <body>
-        <div id="side" class="side"></div>
+        <div id="side" class="side">
+            <div id="myDIV" class="header">
+                <h2>My To Do List</h2>
+                <input type="text" id="myInput" placeholder="Title...">
+                <span onclick="newElement()" class="addBtn">Add</span>
+            </div>
+            <ul id="myUL">
+                <li>Hit the gym</li>
+                <li class="checked">Pay bills</li>
+                <li>Meet George</li>
+                <li>Buy eggs</li>
+                <li>Read a book</li>
+                <li>Organize office</li>
+            </ul> 
+        </div>
         <div id="map" class="map"></div>
         <script src="map.js"></script>
+        <script src="list.js"></script>
     </body>
 </html>
