--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
         <div id="map" class="map"></div>
         <script src="map.js"></script>
         <script src="list.js"></script>
+        <script> 
+            const {ipcRenderer} = require('electron')
+            ipcRenderer.on('update', function(event, arg) {
+                console.log(arg.msg);
+            });
+        </script>
     </body>
 </html>
