implement refreshPorts function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="side" class="side">
             <div class="header">
             <span>Ports</span>
-            <span class="reload" onClick="reloadPorts()">&#x21bb;</span>
+            <span class="reload" onClick="refreshPorts()">&#x21bb;</span>
             </div>
             <ul id="portsList">
                 <li>COM0</li>
