Add automatic serial port connection by vendor id and product id.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
     </head>
     <body>
         <div id="side" class="side">
-            <div class="header">
-            <span>Ports</span>
-            <span class="reload" onClick="refreshPorts()">&#x21bb;</span>
-            </div>
-            <ul id="portsList">
-            </ul>
             <div id="myDIV" class="header">Data</div>
-            <ul id="dataList">
-            </ul>
+            <ul id="dataList"></ul>
         </div>
         <div id="map" class="map"></div>
         <script src="renderer.js"></script>
